fix(domain/valueobjects): add correct conversion to String and change parsing